--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -50,3 +50,25 @@
   font-size: 16px;
   font-weight: 400;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    width: 80%;
+    flex-wrap: wrap;
+  }
+
+  .footer-details {
+    width: 45%;
+    margin: 18px 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-details h4 {
+    font-size: 20px;
+  }
+
+  .footer-details ul {
+    font-size: 16px;
+  }
+}
