--- a/Frontend/src/Components/RegistrationForm/Form.css
+++ b/Frontend/src/Components/RegistrationForm/Form.css
@@ -1,6 +1,8 @@
 .container {
   text-align: left;
-  margin: 5% 20% 20%;
+  margin: 10% ;
+  padding: 3%;
+  max-width: 100%;
 }
 .header-logo img {
   width: 10%;
@@ -49,6 +51,19 @@
 }
 
 .table {
-  border: 1px solid black;
+  border: 1px solid rgb(98, 97, 97);
+  border-Collapse: collapse; 
   width: 100%;
+  
+}
+
+th, td{
+  border: 1px solid rgb(119, 118, 118);
+  padding: 2px;
+  text-align: center;
+  
+}
+#scroll-prop{
+  overflow: scroll;
+  overflow-y: hidden;
 }
