--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -31,7 +31,7 @@
   font-size: 20px;
   padding: 16px;
   border-radius: 50px;
-  background-color: white;
+  background-color: transparent;
 }
 
 .home-inner-div button:hover {
