--- a/Frontend/src/Components/RegistrationForm/Form.css
+++ b/Frontend/src/Components/RegistrationForm/Form.css
@@ -1,35 +1,29 @@
 .container {
   text-align: left;
-  margin: 5%;
+  margin: 10%  ;
   padding: 3%;
   max-width: 100%;
 }
-
 .header-logo img {
   width: 10%;
 }
-
 .header-content h1 {
   font-size: 50px;
   margin: 16px 0;
 }
-
 .header-content h3 {
   font-weight: 400;
   font-size: 20px;
   margin: 16px 0;
 }
-
 .header-content p {
   font-weight: bold;
   margin: 24px 0;
 }
-
 .header-content h4 {
   color: blue;
   margin: 16px 0;
 }
-
 .registration-form-content input {
   border-radius: 5px;
   padding: 8px;
@@ -47,53 +41,88 @@
   width: 50%;
   margin-bottom: 16px;
 }
-
 .registration-form-content textarea {
   border-radius: 5px;
   padding: 0px 40px 40px 0px;
   width: 100%;
 }
-
 .registration-form-content button {
   border-radius: 5px;
   background-color: black;
   color: white;
   padding: 10px;
 }
-
 .registration-form-content h2 {
   color: rgb(66, 66, 169);
   font-size: 18px;
 }
 
 .table {
-  border: 1px solid rgb(98, 97, 97);
+  border: 1px solid rgb(156, 156, 156);
   border-Collapse: collapse;
   width: 100%;
   margin-top: 16px;
   margin-bottom: 16px;
 }
 
-th,td{
-  border: 1px solid rgb(119, 118, 118);
-  padding: 4px;
+th, td{
+  border: 1px solid rgb(158, 157, 157);
   text-align: center;
   font-weight: 600;
+  position: sticky;
+  left: 0;
+  white-space: wrap;
+  background-color: white;
 }
-
 #scroll-prop{
   overflow: scroll;
   overflow-y: hidden;
   overflow-x: hidden;
+
+}
+/* .made-with-tally{
+  position: fixed;
+  bottom:0%;
+  right: 10px;
+  margin:10px;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  font-weight: 600;
+  border: 1px solid rgb(90, 88, 88);
+}
+.made-with-tally img{
+    width: 25px; 
+} */
+@media (max-width:768px){
+  .header-content h1 {
+    font-size: 40px;
+  }  
 }
 
 @media (max-width:480px){
-  .registration-form-content input {
-    width: 100%;
+  .container {
+    margin: 100px 0px 0px 0px;
+    padding: 3px;
+    max-width: 100%;
   }
-
+  .header-content h1 {
+    font-size: 30px;
+  }
+  .registration-form-content input {
+    width: 90%;
+  }
+  .table {
+    /* display: block; */
+    overflow-x: auto;
+    white-space: nowrap;
+    
+  }
   #scroll-prop{
-    overflow: scroll;
-    overflow-y: hidden;
+    overflow: scroll;  
+  } 
+  .registration-form-content textarea {  
+    max-width: 90%;
   }
 }
