--- a/Frontend/src/Components/PrivacyPolicy/PrivacyPolicy.css
+++ b/Frontend/src/Components/PrivacyPolicy/PrivacyPolicy.css
@@ -1,4 +1,13 @@
 .privacy-policy-container {
-    padding: 20px;
-    font-family: Arial, sans-serif;
+  width: 80%;
+  margin: 100px auto;
+  padding-top: 50px;
+  line-height: 1.5rem;
+}
+
+@media (max-width: 480px) {
+  .privacy-policy-container {
+    width: 90%;
+    padding-top: 40px;
   }
+}
