--- a/Frontend/src/Components/About/About.css
+++ b/Frontend/src/Components/About/About.css
@@ -59,6 +59,37 @@
   color: white;
 }
 
+.scrolling {
+  display: flex;
+  overflow: hidden;
+}
+
+.scrolling-content {
+  grid-column-gap: 80px;
+  grid-row-gap: 80px;
+  flex: none;
+  order: 0;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
+  display: flex;
+  margin: 2rem;
+}
+
+.scroll {
+  animation: scroll-left 10s linear infinite;
+}
+
+@keyframes scroll-left {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - 1rem));
+  }
+}
+
 @media (max-width: 1024px) {
   .about-main-div {
     width: 75%;
