--- a/Frontend/src/Components/Card/cardframe.css
+++ b/Frontend/src/Components/Card/cardframe.css
@@ -1,28 +1,42 @@
 .investor-card {
   font-family: Arial, sans-serif;
-  background-color: #f5f7ff;
-  padding: 20px;
-  border-radius: 8px;
+  background-color: #dee2ff;
+  padding: 30px 70px 50px 70px;
+  border-radius: 30px;
   max-width: 1100px;
-  margin: 20px auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 60px auto;
+  box-shadow: 0 4px 8px #adafbe;
+
 }
 
 .back-button {
   background: none;
   border: none;
   color: #555;
-  font-size: 14px;
+  font-size: 20px;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin: 55px 0 55px 35px;
 }
 
 .header {
   text-align: center;
+  /* font-size: 50px; */
+  
+}
+.header h1 {
+  font-size: 50px;
+  color: #4e5374;
 }
 
+.social-links {
+  display: flex;
+  max-width: 10%;
+  
+}
 .logo {
-  border-radius: 50%;
+  border-radius: 60%;
+  display: inline;
+  max-width: 60px;
 }
 
 .social-links {
@@ -64,7 +78,7 @@
 
 .pitch-button,
 .fundraising-button {
-  display: inline-block;
+  display: inline-table;
   width: 100%;
   padding: 10px;
   margin: 5px 0;
