--- a/Frontend/src/Components/About/About.css
+++ b/Frontend/src/Components/About/About.css
@@ -90,15 +90,70 @@
   }
 }
 
+.testimonial {
+  width: 100%;
+}
+
+.testimonial-header {
+  display: flex;
+  width: 800px;
+  margin: 0 auto;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+}
+
+.testimonial-header h1 {
+  font-size: 50px;
+  margin: 1rem 0;
+}
+
+.testimonial-header button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-weight: 900;
+  background-color: white;
+  border: 1px solid gray;
+}
+
+.testimonial-header button:hover {
+  background-color: #4a3aff;
+  color: white;
+}
+
 @media (max-width: 1024px) {
   .about-main-div {
     width: 75%;
+  }
+
+  .testimonial-header {
+    width: 530px;
+  }
+
+  .testimonial-header h1 {
+    font-size: 30px;
+    margin: 1rem 0;
   }
 }
 
 @media (max-width: 768px) {
   .about-main-div {
     width: 90%;
+  }
+
+  .testimonial-header {
+    width: 460px;
+  }
+
+  .testimonial-header h1 {
+    font-size: 25px;
+    margin: 1rem 0;
+  }
+
+  .testimonial-header button {
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -109,5 +164,19 @@
   .about-main-buttons button {
     padding: 10px 20px;
     font-size: 14px;
+  }
+
+  .testimonial-header {
+    width: 310px;
+  }
+
+  .testimonial-header h1 {
+    font-size: 20px;
+    margin: 1rem 0;
+  }
+
+  .testimonial-header button {
+    width: 25px;
+    height: 25px;
   }
 }
