--- a/Frontend/src/Components/Navbar/Navbar.css
+++ b/Frontend/src/Components/Navbar/Navbar.css
@@ -37,7 +37,7 @@
   font-size: 16px;
 }
 .navbar-links li {
-  padding: 20px 20px;
+  padding: 10px 20px;
   border-radius: 8px;
   transition: all 0.3s ease;
   background-color: #ffffff;
@@ -225,11 +225,11 @@
     padding: 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    flex-wrap: wrap;
+    
   }
   .dropdown-nav-item2 {
     background-color: #eae7e7;
-    width: 20%;
+    min-width: 100px;
     height: 150px;
     margin-bottom: 10px;
     padding: 10px;
