--- a/Frontend/src/Components/Card/cardframe.css
+++ b/Frontend/src/Components/Card/cardframe.css
@@ -126,3 +126,122 @@
   background-color: #aeb4db;
   color: #fff;
 }
+
+@media (max-width: 1048px) {
+  .investor-card {
+    padding: 20px;
+    max-width: 85%;
+  }
+
+  .header h1 {
+    font-size: 36px;
+  }
+
+  .logo {
+    max-width: 45px;
+  }
+
+  .description {
+    font-size: 15px;
+  }
+
+  .pitch-button,
+  .fundraising-button {
+    padding: 8px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+  .investor-card {
+    padding: 15px;
+    border-radius: 20px;
+    width: 80%;
+  }
+
+  .header h1 {
+    font-size: 32px;
+  }
+
+  .logo {
+    max-width: 40px;
+  }
+
+  .description {
+    font-size: 14px;
+  }
+
+  .social-links {
+    gap: 8px;
+  }
+
+  .social-links a img {
+    max-width: 20px;
+  }
+
+  .row div:first-child,
+  .row div:last-child {
+    font-size: 12px;
+  }
+
+  .pitch-button,
+  .fundraising-button {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  .investor-card {
+    padding: 10px;
+    border-radius: 15px;
+    width: 80%;
+  }
+
+  .header h1 {
+    font-size: 28px;
+  }
+
+  .logo {
+    max-width: 35px;
+  }
+
+  .description {
+    font-size: 13px;
+  }
+
+  .pitch-button,
+  .fundraising-button {
+    font-size: 12px;
+    padding: 8px;
+  }
+}
+
+@media (max-width: 320px) {
+  .investor-card {
+    padding: 5px;
+    border-radius: 10px;
+    width: 80%;
+  }
+
+  .header h1 {
+    font-size: 24px;
+  }
+
+  .logo {
+    max-width: 30px;
+  }
+
+  .description {
+    font-size: 12px;
+  }
+
+  .pitch-button,
+  .fundraising-button {
+    font-size: 10px;
+    padding: 5px;
+  }
+
+  .social-links a img {
+    max-width: 15px;
+  }
+}
