--- a/Frontend/src/Components/Home/Home.css
+++ b/Frontend/src/Components/Home/Home.css
@@ -44,18 +44,15 @@
   width: 70%;
   margin-left: 15%;
   margin-bottom: 50px;
-  
+
 }
 
-/* .hr-2 {
-  margin: 0px 0px 30px 30px;
-  padding-top: 0.5px;
-  background-color: #e81010;
-  border-bottom: 1px solid;
-  width: 30px;
-  display: flex;
-  } 
-  */
+hr-2:focus {
+  outline: none;
+  border-radius: 0;
+  border-color: #e81010;
+}
+
 
 .Search {
   border-bottom: 1px solid;
@@ -90,7 +87,6 @@
 
 .filter-section select {
   position: relative;
-  height: fit-content;
   width: 200px;
   text-wrap: wrap;
   text-align: left;
@@ -109,10 +105,32 @@
 }
 
 .home-card {
-  padding: 48px 0;
+  padding: 25px 0;
   display: flex;
   margin: 0;
+  border-bottom: 0.5px solid rgb(250, 224, 250);
+}
 
+.home-card:hover {
+  background-color: #e3fdff;
+}
+
+.home-card img {
+  width: 50px;
+  vertical-align: middle;
+  margin: 0px 5px;
+}
+
+.home-card p {
+  width: 27%;
+  display: flex;
+  justify-content: end;
+}
+
+.db-img {
+  margin: 20px;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
 .home-img {
@@ -137,10 +155,6 @@
   flex-direction: column;
 }
 
-.home-sec:hover {
-  /* background-color: #e097ff; */
-}
-
 .home-sec-header {
   display: flex;
   justify-content: space-between;
@@ -157,17 +171,6 @@
   font-weight: 400;
 }
 
-.home-card img {
-  width: 50px;
-  vertical-align: middle;
-  margin: 0px 5px;
-}
-
-.db-img {
-  margin: 20px;
-  border-radius: 8px;
-  object-fit: cover;
-}
 
 #button-1 {
   padding-left: 15px;
@@ -196,11 +199,6 @@
   width: 25%;
 }
 
-.home-card p {
-  width: 27%;
-  display: flex;
-  justify-content: end;
-}
 
 #button-2 {
   padding-left: 15px;
@@ -250,7 +248,25 @@
     font-size: 18px;
     padding: 12px;
   }
-}
+
+  .home-inner-div button:hover {
+    background-color: #dee2ff;
+    transition: 1.5s;
+  }
+
+  .hr-1 {
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 50px;
+
+  }
+
+  hr-2:focus {
+    outline: none;
+    border-radius: 0;
+    border-color: #e81010;
+  }
+
 
 @media (max-width: 698px) {
   .home-header {
