--- a/Frontend/src/Components/About/About.css
+++ b/Frontend/src/Components/About/About.css
@@ -100,7 +100,6 @@
   margin: 0 auto;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid black;
 }
 
 .testimonial-header h1 {
@@ -120,6 +119,58 @@
 .testimonial-header button:hover {
   background-color: #4a3aff;
   color: white;
+}
+
+.testimonial-cards {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  gap: 2rem;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+}
+
+.testimonial-cards::-webkit-scrollbar {
+  display: none;
+}
+
+.testimonial-card {
+  width: 23%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  flex: 0 0 auto;
+}
+
+.testimonial-info {
+  display: flex;
+  width: 100%;
+}
+
+.info-image-div {
+  width: 30%;
+}
+
+.info-image-div img {
+  width: 80%;
+  margin: 1rem 0.5rem;
+  border-radius: 50%;
+}
+
+.info-name-div {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-name-div h4 {
+  font-weight: 200;
+}
+
+.testimonial-card p {
+  padding: 1rem;
+  text-align: start;
 }
 
 @media (max-width: 1024px) {
