--- a/Frontend/src/Components/Spotlight/SpotlightForm.css
+++ b/Frontend/src/Components/Spotlight/SpotlightForm.css
@@ -52,7 +52,7 @@
    
     .container {
       margin: 100px 0px 0px 0px;
-      padding: 3px;
+      padding-bottom: 20px;
       max-width: 100%;
     }
     .header-content h1 {
