--- a/Frontend/src/Components/Spotlight/SpotlightForm.css
+++ b/Frontend/src/Components/Spotlight/SpotlightForm.css
@@ -1,36 +1,36 @@
-.spotlight-container {
+.spotlight-form-container {
   text-align: left;
   margin: 10%;
   padding: 3%;
   max-width: 100%;
 }
 
-.spotlight-header-content h1 {
+.spotlight-form-header-content h1 {
   font-size: 50px;
   margin: 16px 0;
 }
 
-.spotlight-header-logo img {
+.spotlight-form-header-logo img {
   width: 10%;
   margin-top: -55px;
   margin-bottom: 15px;
 }
 
-.spotlight-registration-form-content select {
+.spotlight-form-registration-form-content select {
   border-radius: 5px;
   padding: 10px;
   width: 50%;
   margin-bottom: 16px;
 }
 
-.spotlight-registration-form-content textarea {
+.spotlight-form-registration-form-content textarea {
   border-radius: 5px;
   padding: 14px;
   width: 100%;
   margin-bottom: 15px;
 }
 
-.spotlight-registration-form-content button {
+.spotlight-form-registration-form-content button {
   border-radius: 5px;
   background-color: black;
   color: white;
@@ -38,28 +38,28 @@
   margin-top: 15px;
 }
 
-.spotlight-registration-form-content h2 {
+.spotlight-form-registration-form-content h2 {
   color: rgb(66, 66, 169);
   font-size: 18px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
 
-.spotlight-registration-form-content p {
+.spotlight-form-registration-form-content p {
   margin-top: 15px;
 }
 
 @media (max-width: 480px) {
-  .spotlight-container {
+  .spotlight-form-container {
     margin: 100px 0px 0px 0px;
     padding-bottom: 20px;
     max-width: 100%;
   }
-  .spotlight-header-content h1 {
+  .spotlight-form-header-content h1 {
     font-size: 30px;
   }
 
-  .spotlight-registration-form-content textarea {
+  .spotlight-form-registration-form-content textarea {
     max-width: 90%;
   }
 }
